--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-loader-spinner": "^6.1.6",
+    "react-phone-number-input": "^3.4.12",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
